Fixing issue with overflow hidden on smaller screens

--- a/src/components/pages/InsideView.scss
+++ b/src/components/pages/InsideView.scss
@@ -61,3 +61,11 @@
         }
     }
 }
+
+@media(max-width: 767px) {
+    .content {
+        &-main {
+            overflow: inherit;
+        }
+    }
+}
